--- a/index.html
+++ b/index.html
@@ -25,18 +25,34 @@
                     <li> <a href="setores/quanto-produz/">Energia produzida</a> </li>
                 </ul>
 
-                <div id="mobile-menu" class="mobile-menu">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
+            </div>
+            <div id="mobile-menu" class="mobile-menu">
+                <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
     </header>
 
-    <!-- Aqui para baixo é aonde você fará seu artgio 🌟 Incrivel 🌟-->
+    <!-- Aqui para baixo é aonde você fará seu artgio 🌟 Incrivel 🌟 -->
     <main>
         <div class="title">Seu título</div>
+        <div class="teste">lorem*1000</div>
     </main>
 
+    <footer>
+       <div class="toprow-footer">
+        <ul class="footer-refferences">
+            <li> <a  class="footer-links" href="#">Fontes</a></li>
+            <p>|</p>
+            <li> <a  class="footer-links" href="#">Objetivo</a></li>
+            <p>|</p>
+            <li> <a class="footer-links"  href="#">Créditos</a></li>
+        </ul>
+       </div>
+       <div class="midrow-footer">
+            <p>Chochi Saha - Fermentações &copy; 2024 All rights reserved</p>
+       </div>
+
+    </footer>
     <script src="mobile-navbar.js"></script>
 </body>
 
