bug do overflow corrigido adequadamente, imagem adicionada. pronto para o trabalho coletivo

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
     <!-- Aqui para baixo é aonde você fará seu artgio 🌟 Incrivel 🌟 -->
     <main>
-        <div class="title">Seu título</div>
-        <div class="teste">lorem*1000</div>
+        <div class="title">Endocitose e Exocitose</div>
+        <div class="content">
+            <img src="img/capturar-eliminar.webp" alt="">
+        </div>
     </main>
 
     <footer>
