Adicionado várias páginas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>MultiCitosis</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/06a72cc7b8.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
 </head>
 
 <body>
@@ -18,9 +20,9 @@
             </div>
             <div class="nav-container">
                 <ul id="nav-list" class="nav-list">
-                    <li> <a href="setores/definicao/">Definições</a> </li>
-                    <li> <a href="setores/importancia/">Importância</a> </li>
-                    <li> <a href="setores/onde-ocorre/">Onde ocorrem</a> </li>
+                    <li> <a href="index.html">Definições</a> </li>
+                    <li> <a href="setores/importancia/importancia.html">Importância</a> </li>
+                    <li> <a href="setores/onde-ocorre/ondeocorre.html">Onde ocorrem</a> </li>
                     <li> <a href="setores/organismo/">Organismos responsáveis</a> </li>
                     <li> <a href="setores/quanto-produz/">Energia produzida</a> </li>
                 </ul>
@@ -33,26 +35,64 @@
     </header>
 
     <!-- Aqui para baixo é aonde você fará seu artgio 🌟 Incrivel 🌟 -->
-    <main>
-        <div class="title">Endocitose e Exocitose</div>
+
+    <div class="page-container">
         <div class="content">
-            <img src="img/capturar-eliminar.webp" alt="">
+            <div class="title-container">
+                <h1>Definição</h1>
+            </div>
+            <h2>Endocitose</h2>
+            <p>A endocitose e a exocitose são processos fundamentais para a captura e eliminação de substâncias pelas
+                células,
+                respectivamente.
+            </p>
+            <br>
+            <p>
+                A ameba, por exemplo, utiliza a fagocitose, um tipo de endocitose, como um mecanismo de alimentação,
+                onde envolve a
+                formação de pseudópodes para envolver e ingerir partículas de alimentos presentes no ambiente
+                circundante. Além disso,
+                células especializadas, como os macrófagos do sistema imunológico, também realizam a fagocitose para
+                englobar e degradar
+                agentes patogênicos, como bactérias e vírus, contribuindo assim para a defesa do organismo.
+            </p>
+            <div class="imagem-legenda">
+                <img class="cntnt_img_1" src="img/endocitose-gif.gif">
+                <span class="legenda"> <box-icon class="icon" name='info-circle'></box-icon> Processo de
+                    endocitose</span>
+            </div>
+
+            <h2>Exocitose</h2>
+            <p>
+                A exocitose, por sua vez, é o processo pelo qual as células liberam substâncias para o meio
+                extracelular.
+                Isso pode
+                incluir a liberação de hormônios, neurotransmissores, enzimas digestivas e outros produtos celulares.
+                Por
+                exemplo, as
+                células secretoras do pâncreas liberam enzimas digestivas por exocitose no intestino delgado, onde são
+                essenciais para a
+                digestão dos alimentos.
+            </p>
+            <br>
+            <p>
+                É importante ressaltar que tanto a endocitose quanto a exocitose desempenham papéis cruciais na
+                manutenção
+                do equilíbrio
+                interno da célula e na comunicação com o ambiente externo. Esses processos são altamente regulados e
+                coordenados para
+                garantir a homeostase e a funcionalidade celular adequada.
+            </p>
+
+            <div class="imagem-legenda">
+                <img class="cntnt_img_2" src="img/capturar-eliminar.webp">
+                <span class="legenda"> <box-icon class="icon" name='info-circle'></box-icon> Processo de
+                    endocitose (esquerda) e exocitose (direita)</span>
+            </div>
+
         </div>
-    </main>
+    </div>
 
-    <footer>
-       <div class="toprow-footer">
-        <ul class="footer-refferences">
-            <li> <a  class="footer-links" href="#">Fontes</a></li>
-            <li> <a  class="footer-links" href="#">Objetivo</a></li>
-            <li> <a class="footer-links"  href="#">Créditos</a></li>
-        </ul>
-       </div>
-       <div class="midrow-footer">
-            <p>Chochi Saha - Fermentações &copy; 2024 All rights reserved</p>
-       </div>
-
-    </footer>
     <script src="mobile-navbar.js"></script>
 </body>
 
